--- a/billing-dashboard/package.json
+++ b/billing-dashboard/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
+    "papaparse": "^5.5.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
