--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,45 @@
-blinker==1.9.0
+argcomplete==3.1.2
+blinker==1.8.2
+boto3==1.36.6
+botocore==1.36.6
+certifi==2024.12.14
+cfn-flip==1.3.0
+charset-normalizer==3.4.1
 click==8.1.8
-Faker==35.0.0
+durationpy==0.9
+Faker==19.6.1
 Flask==3.1.0
-Flask-Cors==5.0.0
+Flask-Cors==3.0.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+gunicorn==23.0.0
+hjson==3.1.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
+jmespath==1.0.1
+kappa==0.6.0
 MarkupSafe==3.0.2
 numpy==2.2.2
-pandas==2.2.3
+packaging==24.2
+pandas==2.2.2
+placebo==0.9.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-slugify==8.0.4
 pytz==2024.2
+PyYAML==6.0.2
+requests==2.32.3
+s3transfer==0.11.2
 six==1.17.0
 SQLAlchemy==2.0.37
+text-unidecode==1.3
+toml==0.10.2
+tqdm==4.67.1
+troposphere==4.9.0
 typing_extensions==4.12.2
 tzdata==2025.1
+urllib3==2.3.0
 Werkzeug==3.1.3
+wheel==0.41.3
+zappa==0.59.0
